# SQLite3-for-VCMP

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  callbacks.c  functions.c  functions.h  main.c  main.h
examples/alias/: main.nut  playeralias.nut
squirrel/: SQFuncs.c  SQFuncs.h
